# TicTacToe

./: .gitignore  README.md
cmake-sfml-project-master/cmake-sfml-project-master/: CMakeLists.txt
cmake-sfml-project-master/cmake-sfml-project-master/Include/Game/: Board.hpp  Button.hpp  Game.hpp  GameSettings.hpp
cmake-sfml-project-master/cmake-sfml-project-master/Include/Game/UI/: Button.hpp  MainMenu.hpp  MenuScreen.hpp  Text.hpp  UIElement.hpp
cmake-sfml-project-master/cmake-sfml-project-master/Include/Game/UI/Menus/: GameOver.hpp  MainMenu.hpp  PlaySettings.hpp
cmake-sfml-project-master/cmake-sfml-project-master/src/: Board.cpp  Button.cpp  Game.cpp  main.cpp
cmake-sfml-project-master/cmake-sfml-project-master/src/UI/: Button.cpp  Text.cpp
